# libfinite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changenotes.md  finite-gamepad.xml  generate.sh  meson.build  text-input.xml  v0.6 banner
audio/: audio.c
core/: file.c  json.c  log.c
draw/: btn.c  draw.c  listen.c  window.c  wl_shm.c
examples/: audio.c  draw.c
examples/audio/: audio.c
examples/audio demo/: meson.build
examples/auth/: README.md  main.c  meson.build
examples/controller/: main.c  meson.build  recipe.yaml
examples/cube/: meson.build  xdg-shell.xml
examples/cube demo/: meson.build
examples/cube/src/: main.c
examples/draw/: main.c  meson.build
examples/layer-shell/: main.c  meson.build
examples/render/advance-triangle/: render-pro-triangle.c
examples/render/advanced-triangle/: render-pro-triangle.c
examples/render/basic-triangle/: render-triangle.c
examples/render/basic-triangle/shaders/: shader_base.vert
examples/render/spinning-plane/: main.c
examples/render/textures/: main.c
examples/shaders/: compile.sh
examples/textbox/: main.c  meson.build
include/: communication.h  core.h  draw.h  input.h  jsmn.h  json.h  log.h  render.h  user.h  window.h  wl_shm.h
include/audio/: audio.h
include/draw/: cairo.h  draw.h  window.h  wl_shm.h
include/input/: gamepad.h  input-core.h  input.h  keyboard.h  textbox.h
include/protocol/: text-input-client-protocol.h
include/render/: memory.h  render-core.h  render-image.h  render.h  vulkan.h
include/systemapicommunication/: communication.c
include/user/: req.h  user.h
include/utils/: jsmn.h
input/: gamepad.c  input.c  listen.c  text.c
mailroom/: meson.build  meson.options
mailroom/include/: auth.h  core.h  gamepad.h  log.h
mailroom/src/: auth.c  core.c  gamepad.c
protocol/xml/: generate.sh
render/: image.c  memory.c  render.c  shaders.c  vulkan.c
render/include/: render.h  vulkan.h
render/shaders/: README.md  cube.vert.glsl  lit.frag.glsl  lit.vert.glsl
user/: auth.c  user.c
